# LibTorchDemo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  dependencies.txt
LibTorchDemo/: CMakeLists.txt  EndToEndDemo.cpp  LibTorchDemo.cpp  LibTorchDemo.h  ModelManager.cpp  ModelManager.h
Python/: my_script_module.py  requirments.txt  traced_script_module.py
Python/tutorials/: build_neural_networks_quickly.py  classification.py  loss_functions.py  regression.py  save_neural_networks.py  torch_vs_numpy.py  variable_demo.py
